--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -11,7 +11,9 @@ main:
   - name: Publications
     url: '#featured'
     weight: 50
- 
+ - name: CV
+    url: resume.pdf
+    weight: 70
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
