--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -12,7 +12,7 @@ main:
     url: '#featured'
     weight: 50
  - name: CV
-    url: resume.pdf
+    url: uploads/resume.pdf
     weight: 70
 
 # Link to a PDF of your resume/CV from the menu.
